# fc4eosc-nlsearch

./: Dockerfile  README.md  api_nl_search-0.1.0-py3-none-any.whl  cordis_schema.json  docker-compose-test.yml  docker-compose.yml  fc4eosc_schema.json  pyproject.toml  requirements.txt
app/: main.py
app/static/: styles.css
app/templates/: base.html  contact.html  fc4eosc.html  nl2sql.html
app/templates/include/: navbar.html
darelabdb/api_nl_search/app/: database.py  llama_main.py  models.py  t5_main.py
darelabdb/nlp_data_processing/: create_data_module.py  data_module_class.py  sequential_processing_executor.py  sql_datapoint_model.py
darelabdb/nlp_data_processing/dataset_adapters/: bird_adapter.py  spider_adapter.py
darelabdb/nlp_data_processing/processing_steps/: __init__.py  add_sql_asc_order_explicitly.py  add_sql_whitespaces.py  assemble.py  lowercase_sql.py  processing_step_picker.py  remove_db_id.py  remove_whitespace.py  schema_linking.py  schema_serialization.py  sql_autocorrect.py  sql_keep_executable.py  sql_remove_table_aliases.py  sql_transpile.py
darelabdb/nlp_experiment_runner/: callbacks.py  factory.py  inference.py  read_configuration.py  sweep.py  test.py  train.py
darelabdb/nlp_experiment_runner/example_configs/: .env.example  (+2 more)
darelabdb/nlp_metrics/: db_schema.py  execution_accuracy.py  metric_picker.py  value_linking_accuracy.py
darelabdb/nlp_models/: model_class_picker.py  peft_class_picker.py  seq_to_seq.py
darelabdb/nlp_sql_to_text/: model.py
darelabdb/nlp_text_to_sql/: model.py
darelabdb/nlp_text_to_sql_llm/: __init__.py  ollama.py
darelabdb/utils_datasets/: .env.example  __init__.py  academic.py  advising.py  atis.py  bird.py  dataset_abc.py  dataset_class_picker.py  fc4eosc.py  geoquery.py  imdb.py  iris.py  mock_dataset.py  nestle.py  ott_qa.py  qr2t_benchmark.py  restaurants.py  scholar.py  spider.py  totto.py  value_linking_dataset.py  wikisql.py  wikitable.py  yelp.py
darelabdb/utils_query_analyzer/: __init__.py  analyze_query_dataset.py  process_sql.py
model/: model.py
templates/: base.html  contact.html  fc4eosc.html  nl2sql.html
templates/include/: navbar.html
utils/: database.py
(+48 files in other folders)
